# uselessgoddess-cortex

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  Cargo.toml  ROADMAP.md
game_rules/: Cargo.toml
game_rules/src/: lib.rs
game_rules/src/entities/: character.rs  components.rs  mod.rs
game_rules/src/mechanics/: mod.rs
game_rules/src/world_state/: mod.rs
narrative_core/: Cargo.toml
narrative_core/src/: events.rs  lib.rs
narrative_core/src/context_assembler/: activation.rs  mod.rs
narrative_core/src/knowledge_base/: fact.rs  graph.rs  mod.rs  tag.rs
