[workspace]
resolver = "2"
members = [
    "game_rules",
    "narrative_core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["The Cortex Contributors"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
