[package]
name = "game_rules"
description = "The World Bible - game rules, mechanics, and entities for The Cortex"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
toml = "0.8"

[dev-dependencies]
